--- a/app/src/main/res/layout/content_gurps.xml
+++ b/app/src/main/res/layout/content_gurps.xml
@@ -412,7 +412,22 @@ android:layout_height="match_parent" tools:context="combobreaker.rpgassistant.GU
                 android:onClick="minuscfp"/>
         </RelativeLayout>
 
-    </RelativeLayout> <!-- endof current hpfp -->
+    </RelativeLayout>
+
+    <!-- endof current hpfp -->
+
+    <!-- Navigates to the Extra Character Info -->
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Additional Character Information"
+        android:id="@+id/adds"
+        android:layout_below="@id/hpfpwindow"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:textSize="20sp"
+        android:onClick="navigateAdds"/>
 
     <!-- Languages -->
 
@@ -420,7 +435,7 @@ android:layout_height="match_parent" tools:context="combobreaker.rpgassistant.GU
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/languageswindow"
-        android:layout_below="@id/hpfpwindow">
+        android:layout_below="@id/adds">
 
         <TextView
             android:layout_width="wrap_content"
@@ -430,9 +445,10 @@ android:layout_height="match_parent" tools:context="combobreaker.rpgassistant.GU
             android:textSize="25sp"
             android:textColor="#000000" />
 
+
     </RelativeLayout>
 
-    <!-- Advantages and Perks -->
+     <!-- Advantages and Perks -->
 
     <RelativeLayout
         android:layout_width="wrap_content"
