Everything is awesome! When you're Jon Manoa!
Then the activity works and the expandable lists work right and then everything is awesome!

--- a/app/src/main/res/layout/content_gurps.xml
+++ b/app/src/main/res/layout/content_gurps.xml
@@ -421,12 +421,12 @@ android:layout_height="match_parent" tools:context="combobreaker.rpgassistant.GU
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Additional Character Information"
-        android:id="@+id/adds"
+        android:text="Additional Information"
+        android:id="@+id/monster"
         android:layout_below="@id/hpfpwindow"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:textSize="20sp"
+        android:layout_alignParentRight="true"
+        android:textSize="40sp"
         android:onClick="navigateAdds"/>
 
     <!-- Languages
